# notion-nlp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.de.md  README.md  README.origin.md  README.zh.md  config.sample.yaml  create_python_env_in_new_machine.sh  env.sh  notion_rich_text_analysis.ipynb  notion_text_analysis.ipynb  pyproject.toml  release.sh  requirements.txt  setup.cfg  tasks.py  test.ipynb  tf_idf_topic.csv  toc.py  tox.ini
.github/workflows/: main.yml  master.yml  release.yml
config/: config.sample.yaml
configs/: config.sample.yaml  config.test.yaml  notion.sample.yaml  notion.test.yaml
docs/: en_unit_testing_task.tf_idf.analysis_result.top5_word_with_sentences.md  readme.new.md  zh_unit_testing_task.tf_idf.analysis_result.top5_word_with_sentences.md
docs/tango/: add_integration_to_database.md  add_integration_to_database.zh.md  get_the_integration_token.md  get_the_integration_token.zh.md
notion-nlp-dataset/configs/: config.sample.yaml  config.test.yaml  notion.test.yaml
resources/stopwords/: dario_stopwords.txt
scripts/: Chinese-simple.bat  English.bat  parrot.bat  start.bat  中文.bat  中文.sh
src/notion_nlp/: __init__.py  __main__.py
src/notion_nlp/core/: __init__.py  api.py  nlp.py  task.py  visual.py
src/notion_nlp/parameter/: __init__.py  config.py  error.py  log.py  utils.py
src/notion_rich_text_analysis/: __init__.py  __main__.py  notion_db_text.py  notion_text_analysis.py
src/notion_rich_text_analysis/parameter/: log.py  utils.py
tests/: config.test.yaml  test_api.py  test_nlp.py  test_notion_nlp.py  test_notion_rich_text_analysis.py  test_task.py
utils/: log.py
